--- a/prova-renan/package.json
+++ b/prova-renan/package.json
@@ -12,7 +12,10 @@
     "next": "14.2.4",
     "node": "^20.15.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.24.0",
+    "react-scroll": "^1.9.0",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
