--- a/prova-renan/package.json
+++ b/prova-renan/package.json
@@ -13,9 +13,15 @@
     "node": "^20.15.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.10.3",
+    "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-move": "^6.5.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.24.0",
     "react-scroll": "^1.9.0",
-    "react-spring": "^9.7.3"
+    "react-spring": "^9.7.3",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/node": "^20",
